@@ -4,4 +4,6 @@ EXPOSE 8080
 
 WORKDIR /app
 
-COPY target/
+COPY target/gear-planner-server-1.0-SNAPSHOT.jar /app/app.jar
+
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
